<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="MAIN" Id="{6d356402-53c3-4c11-804e-d15c2b650fb5}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
conv1 : Conveyor := (
status:=0, 
id:=1, 
red_light_on:=0, 
yellow_light_on:=0,
green_light_on := 0,
in_sensor := 0,
out_sensor := 0,
motor_on := 0);

conv2 : Conveyor := (
status:=0, 
id:=2, 
red_light_on:=0, 
yellow_light_on:=0,
green_light_on := 0,
in_sensor := 0,
out_sensor := 0,
motor_on := 0);

conv3 : Conveyor := (
status:=0, 
id:=3, 
red_light_on:=0, 
yellow_light_on:=0,
green_light_on := 0,
in_sensor := 0,
out_sensor := 0,
motor_on := 0);
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[Flash()]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>