<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="conv1_task" Id="{190889af-f3d0-45f8-9b36-2dbc7b310fbe}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM conv1_task
VAR
	conv1 : Conveyor := (
start:=0,
status:=0, 
id:=1, 
red_light_on:=0, 
yellow_light_on:=0,
green_light_on := 0,
in_sensor := 0,
out_sensor := 0,
motor_on := 0,
stop:=0,
was_stopped:=0,
test_lights:=0);

fbFlash : Flash;
Count : INT;
myVar : BOOL := FALSE;
myVar_prev : BOOL := FALSE;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF conv1.test_lights THEN
	conv1.status := 4;
END_IF

IF conv1.start AND NOT conv1.motor_on THEN
	conv1.status:=2;
END_IF

IF conv1.start AND conv1.in_sensor THEN
	Count := 0;
	conv1.status:=3;
END_IF

IF conv1.stop THEN
	Count := 0;
	conv1.status:=1;
END_IF

IF conv1.was_stopped AND NOT conv1.stop THEN
	conv1.status:=0;
END_IF


CASE conv1.status OF

	0: // defined default state
		conv1.green_light_on := FALSE;
		conv1.yellow_light_on := FALSE;
		conv1.red_light_on := FALSE;
		conv1.motor_on := FALSE;
		conv1.was_stopped := FALSE;
		Count := 0;
		myVar_prev := 0;
		

	1: //red light - stop
		 fbFlash(bstart:=TRUE, Time_off:=T#2S, Time_on:=T#1S);
		 conv1.red_light_on := fbFlash.out;
		 conv1.yellow_light_on := FALSE;
		 conv1.green_light_on := FALSE;
		 conv1.motor_on:=FALSE;
		 conv1.start:=FALSE;
		 conv1.was_stopped := TRUE;
		 
	2: //yellow light - idle
		 conv1.yellow_light_on := TRUE;
		 
	3: //green light - running
		 fbFlash(bstart:=TRUE, Time_off:=T#1S, Time_on:=T#0.5S);
		 conv1.green_light_on := fbFlash.out;
		 conv1.motor_on:=TRUE;
		 IF Count > 3 THEN
			 conv1.out_sensor:= TRUE;
			 conv1.motor_on:=FALSE;
			 conv1.in_sensor:= FALSE;
			 fbFlash.bstart := FALSE;
			 Count := 0;
			 conv1.green_light_on := FALSE;
		 END_IF
	
	4:	// test lights
		fbFlash(bstart:=TRUE, Time_off:=T#500MS, Time_on:=T#500MS);
		conv1.green_light_on := fbFlash.out;
		conv1.red_light_on := fbFlash.out;
		conv1.yellow_light_on := fbFlash.out;
		IF Count > 5 THEN
			fbFlash.bstart := FALSE;
			Count := 0;
			conv1.green_light_on := FALSE;
			conv1.red_light_on := FALSE;
			conv1.yellow_light_on := FALSE;
			conv1.status := 0;
			conv1.test_lights := 0;
		END_IF
	

END_CASE

IF fbFlash.out AND NOT myVar_prev THEN
	Count := Count + 1;  // Increment the counter
END_IF
		 
myVar_prev := fbFlash.out;]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>